# uch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: array.h  keywords.h  xmalloc.h
include/math/: vec.h
